--- a/ExpenseTracker/Components/Layout/MainLayout.razor
+++ b/ExpenseTracker/Components/Layout/MainLayout.razor
@@ -1,15 +1,21 @@
 ﻿@inherits LayoutComponentBase
+@using ExpenseTracker.Services
+@inject AuthenticationStateService authStateService
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
+     @if (authStateService.IsAuthenticated())
+    {
+        <div class="sidebar">
+            <NavMenu />
     </div>
-
+    }
     <main>
+        @if (authStateService.IsAuthenticated())
+    {
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <a href="/" target="_blank">Profile</a>
         </div>
-
+    }
         <article class="content px-4">
             @Body
         </article>
