--- a/ExpenseTracker/Components/Layout/NavMenu.razor
+++ b/ExpenseTracker/Components/Layout/NavMenu.razor
@@ -1,4 +1,9 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject AuthenticationStateService authStateService
+@inject NavigationManager navigationManager
+@using Microsoft.AspNetCore.Components
+@using ExpenseTracker.Services
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">ExpenseTracker</a>
     </div>
@@ -9,19 +14,40 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="dashboard" Match="NavLinkMatch.All">
+                <span class="bi bi-dashboard" aria-hidden="true"></span> Dashboard
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="transactions">
+                <span class="bi bi-transaction" aria-hidden="true"></span> Transactions
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="debts">
+                <span class="bi bi-debt" aria-hidden="true"></span> Debts
             </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="tags">
+                <span class="bi bi-tag" aria-hidden="true"></span> Tags
+            </NavLink>
+        </div>
+
+        <div class="nav-item mt-auto">
+            <button class="btn btn-logout" @onclick="LogoutUser">
+              Logout
+            </button>
         </div>
     </nav>
 </div>
+
+
+@code {
+    private async Task LogoutUser()
+    {
+        
+        authStateService.Logout();
+        navigationManager.NavigateTo("/");
+    }
+}
